crates/interpreter/src/codegen/snapshots/submilli_engine__codegen__tests__dwarf_line_program_snapshot.snap
---
source: crates/interpreter/src/codegen/mod.rs
assertion_line: 5043
expression: dump
---
sequence start=0x2 end=0x4
  addr=0x2 file=1 line=1 col=Column(1) stmt=true
  addr=0x4 file=1 line=1 col=Column(1) stmt=true end_sequence
sequence start=0x5 end=0x28
  addr=0x5 file=1 line=1 col=Column(10) stmt=true
  addr=0xa file=1 line=1 col=Column(25) stmt=true
  addr=0xa file=1 line=2 col=Column(3) stmt=true
  addr=0xa file=1 line=2 col=Column(19) stmt=true
  addr=0x15 file=1 line=3 col=Column(3) stmt=true
  addr=0x15 file=1 line=3 col=Column(19) stmt=true
  addr=0x20 file=1 line=4 col=Column(3) stmt=true
  addr=0x20 file=1 line=4 col=Column(10) stmt=true
  addr=0x20 file=1 line=4 col=Column(10) stmt=true
  addr=0x22 file=1 line=4 col=Column(14) stmt=true
  addr=0x28 file=1 line=4 col=Column(14) stmt=true end_sequence
